--- a/contact/contact.css
+++ b/contact/contact.css
@@ -104,6 +104,12 @@ input[type="submit"] {
     color: var(--rosa);
     border: none;
 }
+.contact-title a:link,.contact-title a:visited, .contact-title a:active {
+    text-decoration: none;
+    color: #000;
+    font-weight: bolder;
+    font-style: italic;
+}
 
 @media only screen and (min-width: 1200px) {
     .contact-title h3 {
